# BoOokSystem_C_OOP

./: .gitignore  CMakeLists.txt  Jenkinsfile
.cache/clangd/index/: bar.c.9CAE76A8D82CF543.idx  bar.h.E1415DF8BC9C49F6.idx  book_management.c.B656A117AAAF83F2.idx  book_management.h.B1769BB63B9744C3.idx  foo.c.460B63E5C0C37DA0.idx  foo.h.58BDF91E9DF28DB8.idx  library_management.c.915D0B971F47C4E7.idx  library_management.h.D0F050AA6A6B780B.idx  log.c.C2851F055D07CC41.idx  log.h.6D57D1C7989D881A.idx  main.c.390F5FC4E4342E95.idx  member_management.c.9EB665DDC1F61B66.idx  member_management.h.6B567A76473405E5.idx  structures.h.AF64D6ECB70692B7.idx  test_bar.c.0D180292FBFCBD3E.idx  test_book_management.c.1C1203776F2C1F53.idx  test_foo.c.2711D50B2823FB15.idx  test_library_management.c.85BBB6AF8E8CA0F4.idx  test_member_management.c.ABA330C2EF945161.idx
app/: CMakeLists.txt  main.c
cmake/: Sanitizer.cmake  Tools.cmake
src/: CMakeLists.txt
src/bookManagement/: CMakeLists.txt  book_management.c  book_management.h
src/include/: structures.h
src/libraryManagement/: CMakeLists.txt  library_management.c  library_management.h
src/memberManagement/: CMakeLists.txt  member_management.c  member_management.h
tests/: CMakeLists.txt  test_book_management.c  test_library_management.c  test_member_management.c
tools/: Jenkinsfile
